<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.android.musicalstructureapp.Artist">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:context="com.example.android.radiobuttonsimprovements.MainActivity">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="MUSIC PLAYER"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="45sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_album"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:drawableTop="@android:drawable/ic_media_play"
                android:text="@string/album" />


            <Button
                android:id="@+id/button_main"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:drawableTop="@android:drawable/ic_media_play"
                android:text="@string/main" />

            <Button
                android:id="@+id/button_list"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:drawableTop="@android:drawable/ic_media_play"
                android:text="@string/list" />
            <Button
                android:id="@+id/button_album2"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:drawableTop="@android:drawable/ic_media_play"
                android:text="@string/albumtwo" />


        </LinearLayout>

        <TextView
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/artist1"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_weight="5"
                android:src="@drawable/song" />

            <TextView
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/song1"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/playsong1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_weight="5"
                android:src="@drawable/play" />

            <ImageView
                android:id="@+id/stopsong1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_weight="5"
                android:src="@drawable/stop" />

        </LinearLayout>

        <TextView
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/artist2"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_weight="5"
                android:src="@drawable/song" />

            <TextView
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/song2"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/playsong2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_weight="5"
                android:src="@drawable/play" />

            <ImageView
                android:id="@+id/stopsong2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_weight="5"
                android:src="@drawable/stop" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_weight="5"
                android:src="@drawable/song" />

            <TextView
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/song3"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/playsong3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_weight="5"
                android:src="@drawable/play" />

            <ImageView
                android:id="@+id/stopsong3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_weight="5"
                android:src="@drawable/stop" />
        </LinearLayout>

        <TextView
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/artist3"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_weight="5"
                android:src="@drawable/song" />

            <TextView
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/song4"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/playsong4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_weight="5"
                android:src="@drawable/play" />

            <ImageView
                android:id="@+id/stopsong4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_weight="5"
                android:src="@drawable/stop" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_weight="5"
                android:src="@drawable/song" />

            <TextView
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/song5"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/playsong5"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_weight="5"
                android:src="@drawable/play" />

            <ImageView
                android:id="@+id/stopsong5"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_weight="5"
                android:src="@drawable/stop" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>